@@ -1,5 +1,6 @@
 [email-message]
-summary=tana_fi_emails
-body=tana_fi_latest
-icon=qgn_list_messagin
-dbus-call=com.nokia.osso_email /com/nokia/osso_email com.nokia.osso_email open_inbox
+Summary=tana_fi_emails
+Body=tana_fi_latest
+Icon=qgn_list_messagin
+D-Bus-Call=com.nokia.osso_email /com/nokia/osso_email com.nokia.osso_email open_inbox
+Text-Domain=maemo-af-desktop
