@@ -1,3 +1,10 @@
+2008-11-03  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	* src/hd-incoming-events.c (group_free, group_update): Rename field to
+	  text_domain.
+	  (load_notification_groups): Use symbolic names for key file keys.
+	* src/notification-groups.conf: Use new key names.
+
 2008-10-31  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	* debian/compat:
